# AutoTRandHD

./: .env.example  .gitignore  .ruff.toml  CONTRIBUTING.md  Dockerfile  PRODUCTION_VERIFICATION_REPORT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: server.py
artifacts/: README.md
cli/: autotrandhd_cli.py
configs/: default.yaml
docs/: DATASET_AND_EVALUATION.md  GSoC_2026_HumanAI_Proposal.md  IMPLEMENTATION_ROADMAP.md  PROJECT_SCOPE.md  SYSTEM_ARCHITECTURE.md
frontend/: index.html
scripts/: benchmark_inference.py
src/: __init__.py
src/autotrandhd/: cli.py
src/autotrandhd/api/: app.py  schemas.py
src/autotrandhd/config/: settings.py
src/autotrandhd/core/: __init__.py
src/autotrandhd/core/data/: manifest.py  pdf_loader.py  splits.py
src/autotrandhd/core/decoding/: beam_search.py  confidence.py  greedy_decoder.py  lexicon.py
src/autotrandhd/core/evaluation/: __init__.py  analysis.py  benchmark.py  metrics.py
src/autotrandhd/core/postprocessing/: confidence_gate.py  llm_correction.py  validator.py
src/autotrandhd/core/preprocessing/: deskew.py  line_segment.py  normalize.py  text_region.py
src/autotrandhd/core/recognition/: crnn.py  ctc_loss.py  inference.py  loader.py  trainer.py
src/autotrandhd/services/: __init__.py  model_registry.py  ocr_pipeline.py
src/autotrandhd/utils/: __init__.py  image_io.py  runtime.py
src/data/: __init__.py  manifest.py  pdf_loader.py  splits.py
src/decode/: __init__.py  beam_search.py  confidence.py  greedy_decoder.py  lexicon.py
src/eval/: analysis.py  benchmark.py  metrics.py
src/models/: __init__.py  crnn.py  ctc_loss.py  inference.py  loader.py  trainer.py
src/postprocess/: __init__.py  confidence_gate.py  llm_correction.py  validator.py
src/preprocess/: __init__.py  deskew.py  line_segment.py  normalize.py  text_region.py
tests/: __init__.py  test_data.py  test_decode.py  test_eval.py  test_models.py  test_postprocess.py  test_preprocess.py  test_services.py
