[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrandhd"
version = "0.1.0"
description = "Historical OCR and transcription pipeline for seventeenth-century Spanish printed sources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "jiwer>=3.0",
    "PyMuPDF>=1.23",
    "PyYAML>=6.0",
    "tqdm>=4.65",
    "psutil>=7.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.18",
]

[project.scripts]
autotrandhd-cli = "autotrandhd.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["autotrandhd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
